--- a/src/main/webapp/CSS/style.css
+++ b/src/main/webapp/CSS/style.css
@@ -35,8 +35,8 @@ nav.menu ul {
     border-radius: 25px;
     width: 100%;
     margin: 0;
+    margin-top: 5rem;
 }
-
 
 .bg div {
     width: 66%;
