--- a/src/main/webapp/CSS/style.css
+++ b/src/main/webapp/CSS/style.css
@@ -35,7 +35,13 @@ nav.menu ul {
     border-radius: 25px;
     width: 100%;
     margin: 0;
-    margin-top: 5rem;
+}
+
+table{
+    overflow-y: scroll;
+    width: 66%;
+    margin: auto;
+    text-align:left
 }
 
 .bg div {
